plugins {
	id 'org.springframework.boot' version '2.5.0-M1'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'primer'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '15'

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation "com.stripe:stripe-java:20.37.0"
	implementation 'com.braintreepayments.gateway:braintree-java:3.6.0'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.withType(JavaCompile).each {
	it.options.compilerArgs.add('--enable-preview')
}

tasks.withType(JavaExec) {
	jvmArgs += '--enable-preview'
}

test {
	jvmArgs(['--enable-preview'])
	useJUnitPlatform()
}



